chore: Update plugin id

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obisdian-journal-helper",
+	"id": "journal-helper",
 	"name": "Obsidian Journal Helper",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
